--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "framework7-react": "^6.3.3",
     "highcharts": "^9.2.2",
     "moment": "^2.29.1",
+    "pdfmake": "^0.2.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
