--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@capacitor/cli": "^3.3.4",
     "@capacitor/core": "^3.3.4",
     "@capacitor/filesystem": "^1.0.7",
+    "@capacitor/share": "^1.1.0",
     "@capacitor/storage": "^1.2.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
