--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@byteowls/capacitor-filesharer": "^3.0.0",
     "@capacitor/android": "^3.3.4",
     "@capacitor/app": "^1.0.7",
     "@capacitor/cli": "^3.3.4",
     "@capacitor/core": "^3.3.4",
     "@capacitor/filesystem": "^1.0.7",
-    "@capacitor/share": "^1.1.0",
     "@capacitor/storage": "^1.2.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
