--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "campero-fertilizadoras",
-  "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "version": "0.1.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "@byteowls/capacitor-filesharer": "^3.0.0",
     "@capacitor/android": "^3.3.4",
@@ -19,38 +23,15 @@
     "highcharts": "^9.2.2",
     "moment": "^2.29.1",
     "pdfmake": "^0.2.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-scripts": "4.0.3",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "use-sound": "^4.0.1",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",    
-    "build": "react-scripts build",    
-    "test": "react-scripts test"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "webpack-cli": "^4.9.2"
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "vite": "^2.9.5"
   }
 }
