--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
 	"appId": "com.inta.camperofertilizadoras",
 	"appName": "Campero Fertilizadoras",
-	"webDir": "build",
+	"webDir": "dist",
 	"bundledWebRuntime": false
 }
