--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "highcharts": "^9.2.2",
     "moment": "^2.29.1",
     "pdfmake": "^0.2.4",
-    "react-icons": "^4.2.0",
-    "use-sound": "^4.0.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-icons": "^4.2.0",
+    "typescript": "^4.6.3",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
