--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
   "name": "campero-fertilizadoras",
   "private": true,
-  "version": "0.1.0",
+  "version": "1.1",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@byteowls/capacitor-filesharer": "^3.0.0",
-    "@capacitor/android": "^3.3.4",
-    "@capacitor/app": "^1.0.7",
-    "@capacitor/cli": "^3.3.4",
-    "@capacitor/core": "^3.3.4",
-    "@capacitor/filesystem": "^1.0.7",
-    "@capacitor/storage": "^1.2.3",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
+    "@byteowls/capacitor-filesharer": "^4.0.0",
+    "@capacitor/android": "^5.2.2",
+    "@capacitor/app": "^5.0.6",
+    "@capacitor/cli": "^5.3.0",
+    "@capacitor/core": "^5.2.2",
+    "@capacitor/filesystem": "^5.1.1",
+    "@capacitor/preferences": "^5.0.6",
     "framework7": "^6.3.3",
     "framework7-react": "^6.3.3",
     "highcharts": "^9.2.2",
